# cliraytracer

./: Cargo.toml  teapot.mtl
src/: error.rs  main.rs  raytracer.rs  shader.rs  types.rs  utilities.rs
src/ray_resolvers/: mod.rs  ray_resolver.rs
src/ray_resolvers/bvh/: aabb.rs  dummy.rs  mod.rs  multi_ray_resolver.rs  triangle.rs
